--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <h1 style="text-align: center;color: rgb(15, 14, 112);">Changed Background Color</h1>
     <div style="text-align: center;">
-        <button id="btn">Color Changer1  </button>
+        <button id="btn">Color   </button>
 
     </div>
 
